kubernetes/ingress-https.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-demo-https
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: kdash.demo.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
