kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cluster-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: nginx.demo.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-deployment
                port:
                  number: 80
    
    - host: pgweb.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgweb-service
                port:
                  number: 8081

    - host: traefik.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                # name: traefik-dashboard
                port:
                  number: 80
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes-hello-world
                port:
                  number: 80
